# knowledge-collaboratory

./: .env.sample  .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile-backend  Jenkinsfile-frontend  README.md  astro.config.mjs  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  package.json  restart_deployment.sh  tailwind.config.cjs
.github/workflows/: deploy-frontend.yml  deploy.yml  run-tests-prod.yml  test-backend.yml  test-prod.yml
astro-frontend/: .dockerignore  astro.config.mjs  package.json  tailwind.config.cjs
astro-frontend/src/: env.d.ts
astro-frontend/src/app/: PageAnnotate.tsx  PageBrowse.tsx  PageShapePublisher.tsx
astro-frontend/src/components/: CytoscapeRdf.tsx  DisplayNanopub.tsx  DropdownButton.tsx  Icon.astro  OrcidLogin.tsx  ReactTaggy.tsx  UserSettingsPopper.tsx
astro-frontend/src/components/shape-publisher/: shacl2jsonschema.tsx
astro-frontend/src/layouts/: Footer.astro  Header.astro  Layout.astro  globals.css
astro-frontend/src/pages/: about.md  annotate.astro
astro-frontend/src/utils/: nanostores.ts
backend/: .flake8  Dockerfile  Jenkinsfile-backend  pyproject.toml  requirements.txt  tests-start.sh
backend/app/: biolink-model.shacl.ttl  config.py  initial_data.py  main.py  utils.py
backend/app/api/: api.py  login.py  nanopub.py  ner.py  openai.py  trapi.py  validation.py
backend/app/models/: user.py
backend/app/tests/: conftest.py
backend/app/tests/api/: test_evaluations.py
backend/app/tests/integration/: test_trapi.py
backend/app/tests/production/: test_production_api.py
backend/app/tests/queries/: trapi_anydrugdisease_limit1.json  trapi_drugmulti_limit3.json
backend/app/trapi/: openapi.py  reasonerapi_parser.py
backend/scripts/: dev.sh  format.sh  lint.sh  test.sh
backend/tests/: conftest.py
backend/tests/integration/: test_trapi.py
backend/tests/production/: test_production_api.py
backend/tests/queries/: trapi_anydrugdisease_limitno.json  trapi_diseasemondo_limit1.json  trapi_drugbank_limit1.json  trapi_drugchebi_limit1.json  trapi_drugmulti_limit1.json
frontend/: .eslintrc.json  .gitignore  Dockerfile  Jenkinsfile-frontend  README.md  astro.config.mjs  next.config.js  package.json  tsconfig.json
frontend/app/: App.tsx  Dockerfile  app.json  package.json  reload_dev.sh  tsconfig.json
frontend/app/src/: App.css  biolink-shex.tsx  settings.tsx
frontend/app/src/components/: AutocompleteEntity.tsx  CytoscapeRdf.tsx  DisplayNanopub.tsx  DropdownButton.tsx  Entity.tsx  Footer.tsx  JsonldForm.tsx  (+7 more)
frontend/public/: CNAME  manifest.json
frontend/src/: types.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AutocompleteEntity.tsx  CytoscapeRdf.tsx  DisplayNanopub.tsx  DropdownButton.tsx  Icon.tsx  OrcidLogin.tsx  PubAnnotationProjects.tsx  PublishNanopubButtons.tsx  ReactTaggy.tsx  StyledComponents.tsx  UserSettingsPopper.tsx
frontend/src/layout/: Footer.tsx  NavBar.tsx  Navbar.tsx  layout.tsx
frontend/src/layouts/: Layout.astro  MarkdownLayout.astro
frontend/src/pages/: _app.tsx  about.tsx  annotate.tsx  index.tsx  shape-publisher.tsx
frontend/src/utils/: UserContext.tsx  biolinkModel.ts  biolinkModel.tsx  highlightjs-turtle.tsx  nanostores.ts  settings.ts  settings.tsx  userStore.ts  utils.ts  utils.tsx
legacy-frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package.json
legacy-frontend/app/: App.tsx  app.config.js  package.json
legacy-frontend/app/src/: settings.tsx  utils.tsx
legacy-frontend/src/app/: layout.tsx  page.tsx
legacy-frontend/src/components/: CytoscapeRdf.tsx  DisplayNanopub.tsx  PublishNanopubButtons.tsx  ReactTaggy.tsx  StyledComponents.tsx
legacy-frontend/src/pages/: _app.tsx  _document.tsx  shape-publisher.tsx
legacy-frontend/src/utils/: settings.tsx
nextjs-frontend/: .babelrc  .gitignore  Dockerfile  README.md  next.config.js  package.json
nextjs-frontend/src/: types.d.ts
nextjs-frontend/src/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend/src/components/: CytoscapeRdf.tsx  DisplayNanopub.tsx  Footer.tsx  NavBar.tsx  PubAnnotationProjects.tsx  PublishNanopubButtons.tsx  settings.tsx
nextjs-frontend/src/layout/: NavBar.tsx  layout.tsx
nextjs-frontend/src/pages/: _app.tsx  _document.tsx  annotate.tsx
nextjs-frontend/src/utils/: settings.tsx  utils.tsx
resources/: example_sparql_from_trapi.rq  sparql_get_all_biolink.rq
resources/connections-hypothesis-provider/: README.md  gennifer_nanopub.json  gennifer_trapi.json
resources/drug-disease-cnn-predictions/: README.md
resources/drugcentral/: README.md  drugcentral-ontop.obda
resources/opentargets/: README.md
resources/predict-gold-standard/: README.md  publish_predict_drugdisease.py
resources/snap-biodata/: README.md  publish_snap_drugdisease.py
resources/translator/: README.md  curated_drug_indications.rq  example_sparql_from_trapi.rq  neurodkg_drug_indications.rq  sparql_get_all_biolink.rq
scripts/: Dockerfile  README.md  docker-compose.yml  download_models.sh  drug_indications_from_gdocs.py  example_sparql_from_trapi.rq  nanopub_utils.py  offlabel_pub.txt  publish_nanopubs.py  publish_offlabel_drug_indications.py  publish_predict_drugdisease.py  publish_treatment_indications.py  requirements.txt  retract_nanopubs.py  setup.py
src/: globals.css
src/app/: PageAnnotate.tsx  PageBrowse.tsx  PageShapePublisher.tsx
src/components/: AutocompleteEntity.tsx  BrowsePage.tsx  CytoscapeRdf.tsx  DisplayNanopub.tsx  DropdownButton.tsx  Footer.tsx  Icon.astro  Icon.tsx  NavBar.tsx  OrcidLogin.tsx  PubAnnotationProjects.tsx  PublishNanopubButtons.tsx  ReactTaggy.tsx  StyledComponents.tsx
src/components/shape-publisher/: JsonldForm.tsx  ShapeUploader.tsx
src/layouts/: Footer.astro  Footer.tsx  Header.astro  Layout.astro  MarkdownLayout.astro  NavBar.tsx  NavBarBack.astro  globals.css  markdown.css
src/pages/: about.md  annotate.astro  index.astro  shape-publisher.astro
src/utils/: biolinkModel.tsx  highlightjs-turtle.ts  highlightjs-turtle.tsx  settings.ts  settings.tsx  userStore.ts  utils.ts
(+28 files in other folders)
