[tool.poetry]
name = "knowledge-collaboratory-api"
version = "0.1.0"
description = "An API for the Knowledge Collaboratory developed at the Institute of Data Science at Maastricht University"
authors = ["Vincent Emonet <vincent.emonet@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
python-multipart = "^0.0.5"
requests = "^2.23.0"
httpx = "^0.21.1"
pydantic = "^1.4"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
gunicorn = "^20.0.4"
Authlib = "^0.15.4"
itsdangerous = "^2.0.1"
reasoner-pydantic = "^2.2.3"
reasoner-validator = "^2.2.5"
rdflib = "^6.1.1"
SPARQLWrapper = "^1.8.5"
PyShEx = "^0.8.1"
transformers = "^4.17.0"
spacy = {extras = ["cuda110"], version = "^3.2.3"}
spacy-transformers = "^1.1.5"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
trio = "^0.19.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

