[tool.poetry]
name = "knowledge-collaboratory-api"
version = "0.1.0"
description = "An API for the Knowledge Collaboratory developed at the Institute of Data Science at Maastricht University"
authors = ["Vincent Emonet <vincent.emonet@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
python-multipart = "^0.0.5"
requests = "^2.23.0"
httpx = "^0.21.1"
pydantic = "^1.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
gunicorn = "^20.0.4"
Authlib = "^0.15.4"
itsdangerous = "^2.0.1"
reasoner-pydantic = "^2.2.3"
reasoner-validator = "^2.2.11"
rdflib = "^6.1.1"
SPARQLWrapper = "^1.8.5"
PyShEx = "^0.8.1"
transformers = "^4.17.0"
spacy = {extras = ["cuda110"], version = "^3.2.3"}
spacy-transformers = "^1.1.5"
nanopub = {git = "https://github.com/vemonet/nanopub.git", rev = "dev-vemonet"}
# nanopub = {path = "/opt/nanopub", develop = true}

[tool.poetry.dev-dependencies]
mypy = "=0.770"
black = "^21.10b0"
isort = "^5.0.6"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
trio = "^0.19.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"
# known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
ignore_missing_imports = true
# warn_return_any = true
# warn_unused_configs = true
# disallow_untyped_defs = true
# strict = true

# [[tool.mypy.overrides]]
# module = "fastapi.concurrency"
# warn_unused_ignores = false
# ignore_missing_imports = true

# [[tool.mypy.overrides]]
# module = "tests.*"
# ignore_missing_imports = true
# check_untyped_defs = true

# [tool.pytest.ini_options]
# addopts = [
#   "--strict-config",
#   "--strict-markers",
# ]
# xfail_strict = true
# junit_family = "xunit2"
# filterwarnings = [
#     "error",
#     'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
#     'ignore:starlette.middleware.wsgi is deprecated and will be removed in a future release\..*:DeprecationWarning:starlette',
# ]


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"

